--- a/tr_TR.po
+++ b/tr_TR.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: YOURLS 1.7\n"
+"Project-Id-Version: YOURLS v1.7.2  // Turkish Translation\n"
 "POT-Creation-Date: 2014-01-11 11:50+0100\n"
-"PO-Revision-Date: 2017-11-02 18:58+0300\n"
+"PO-Revision-Date: 2017-11-03 21:06+0300\n"
 "Language-Team: Murat Eray KORKMAZ - www.murateray.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15,7 +15,7 @@ msgstr ""
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Last-Translator: \n"
-"Language: pt_TR\n"
+"Language: tr_TR\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: yourls-infos.php:204
