--- a/tr_TR.po
+++ b/tr_TR.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: YOURLS v1.7.2  // Turkish Translation\n"
 "POT-Creation-Date: 2014-01-11 11:50+0100\n"
-"PO-Revision-Date: 2017-11-03 21:06+0300\n"
+"PO-Revision-Date: 2017-11-03 21:52+0300\n"
 "Language-Team: Murat Eray KORKMAZ - www.murateray.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -416,41 +416,51 @@ msgstr "Heyecan Verici YOURLS Araçları"
 
 #: admin/tools.php:13
 msgid "Bookmarklets"
-msgstr "Yer İşaretlemeleri"
+msgstr "Bookmarkletler"
 
 #: admin/tools.php:15
 msgid ""
 "YOURLS comes with handy <span>bookmarklets</span> for easier link shortening "
 "and sharing."
 msgstr ""
+"YOURLS, bağlantıları kolayca kısaltabilmeniz ve paylaşabilmeniz için bir çok "
+"faydalı <span>bookmarklet</span> ile birlikte gelmektedir."
 
 #: admin/tools.php:17
 msgid "Standard or Instant, Simple or Custom"
-msgstr ""
+msgstr "Standart veya Anında, Basit veya Özel"
 
 #: admin/tools.php:20
 msgid ""
 "The <span>Standard Bookmarklets</span> will take you to a page where you can "
 "easily edit or delete your brand new short URL."
 msgstr ""
+"<span>Standard Bookmarklet</span> sizi basitçe kısa URL düzenlemek ve silmek "
+"üzere bir sayfaya yönlendirir."
 
 #: admin/tools.php:22
 msgid ""
 "The <span>Instant Bookmarklets</span> will pop the short URL without leaving "
 "the page you are viewing."
 msgstr ""
+"<span>Instant Bookmarklet</span> sayfayı terketmeden, açılan pop-up pencere "
+"ile görüntülediğiniz sayfa için kısa URL oluşturur."
 
 #: admin/tools.php:24
 msgid ""
 "The <span>Simple Bookmarklets</span> will generate a short URL with a random "
 "or sequential keyword."
 msgstr ""
+"<span>Simple Bookmarklet</span> rastgele veya ardışık harflerden oluşan bir "
+"kelimeyle otomatik olarak kısa URL oluşturur."
 
 #: admin/tools.php:26
 msgid ""
 "The <span>Custom Keyword Bookmarklets</span> will prompt you for a custom "
 "keyword first."
 msgstr ""
+"<span>Custom Keyword Bookmarklet</span> size istediğiniz anahtar kelimeyi "
+"seçme şansı tanır."
 
 #: admin/tools.php:30
 msgid ""
@@ -458,79 +468,84 @@ msgid ""
 "simply <span>select text</span> on the page you're viewing before clicking "
 "on your bookmarklet link"
 msgstr ""
+"Bağlantı ile birlikte bir açıklama da paylaşmak istiyorsanız, yapmanız "
+"gereken sadece bookmarklete tıklamadan önce görüntülediğiniz sayfada "
+"<span>paylaşmak istediğiniz metni seçmektir</span>"
 
 #: admin/tools.php:33
 msgid "The Bookmarklets"
-msgstr ""
+msgstr "Bookmarkletler"
 
 #: admin/tools.php:35 admin/tools.php:62
 msgid "Click and drag links to your toolbar (or right-click and bookmark it)"
 msgstr ""
+"Eklemek istediğiniz bookmarkleti tıklayıp sürükleyerek araç çubuğunuza "
+"bırakın (veya sağ tıklayıp yer imlerinize ekleyin)"
 
 #: admin/tools.php:41
 msgid "Standard (new page)"
-msgstr ""
+msgstr "Standart (yeni sayfa)"
 
 #: admin/tools.php:42
 msgid "Instant (popup)"
-msgstr ""
+msgstr "Anında (pop-up)"
 
 #: admin/tools.php:47
 msgid "Simple"
-msgstr ""
+msgstr "Basit"
 
 #: admin/tools.php:48 admin/tools.php:49 admin/tools.php:53 admin/tools.php:54
 #: admin/tools.php:68 admin/tools.php:70 admin/tools.php:72
 msgid "Drag to your toolbar!"
-msgstr ""
+msgstr "Araç Çubuğuna Taşı!"
 
 #: admin/tools.php:48
 msgid "Shorten"
-msgstr ""
+msgstr "Kısalt"
 
 #: admin/tools.php:49
 msgid "Instant Shorten"
-msgstr ""
+msgstr "Anında Kısalt"
 
 #: admin/tools.php:52
 msgid "Custom Keyword"
-msgstr ""
+msgstr "Özel Anahter Kelimeyle"
 
 #: admin/tools.php:53
 msgid "Custom shorten"
-msgstr ""
+msgstr "Özel Kısalt"
 
 #: admin/tools.php:54
 msgid "Instant Custom Shorten"
-msgstr ""
+msgstr "Anında Özel Kısalt"
 
 #: admin/tools.php:59
 msgid "Social Bookmarklets"
-msgstr ""
+msgstr "Sosyal Bookmarklet"
 
 #: admin/tools.php:61
 msgid "Create a short URL and share it on social networks, all in one click!"
-msgstr ""
+msgstr "Tek bir tıklamayla bağlantıyı kısalt ve sosyal ağlarda paylaş!"
 
 #: admin/tools.php:64
 msgid "Shorten and share:"
-msgstr ""
+msgstr "Kısalt ve paylaş:"
 
 #: admin/tools.php:68
 msgid "YOURLS &amp; Facebook"
-msgstr ""
+msgstr "YOURLS &amp; Facebook"
 
 #: admin/tools.php:70
 msgid "YOURLS &amp; Twitter"
-msgstr ""
+msgstr "YOURLS &amp; Twitter"
 
 #: admin/tools.php:72
 msgid "YOURLS &amp; Tumblr"
-msgstr ""
+msgstr "YOURLS &amp; Tumblr"
 
 #: admin/tools.php:80
 msgid "Prefix-n-Shorten"
-msgstr ""
+msgstr "Önüne-ekleyerek-Kısalt"
 
 #: admin/tools.php:82
 #, php-format
@@ -539,25 +554,33 @@ msgid ""
 "browser's address bar, add \"<span>%s</span>\" to the beginning of the "
 "current URL (right before its 'http://' part) and hit enter."
 msgstr ""
+"Bir sayfayı görüntülerken, aynı zamanda başına adresi ekleyerek de kısaltma "
+"yapabilirsiniz: Tarayıcınızın adres çubuğuna tıklayın ve “<span>%s</span>” "
+"adresiniz görünen URL adresinin önüne (“http://“ kısmının hemen öncesine) "
+"ekleyin ve enter’a basın."
 
 #: admin/tools.php:85
 msgid ""
 "Note: this will probably not work if your web server is running on Windows"
 msgstr ""
+"Not: Bu özellik muhtemelen Windows altyapısına sahip web sunucularında "
+"çalışmayacaktır"
 
 #: admin/tools.php:87
 msgid " (which seems to be the case here)"
-msgstr ""
+msgstr " (ki bahsedilen örneği burada görüyoruz)"
 
 #: admin/tools.php:93
 msgid "Secure passwordless API call"
-msgstr ""
+msgstr "Güvenli şifresiz API bağlantısı"
 
 #: admin/tools.php:96
 msgid ""
 "YOURLS allows API calls the old fashioned way, using <tt>username</tt> and "
 "<tt>password</tt> parameters."
 msgstr ""
+"YOURLS, API isteklerinde eski geleneksel yöntemi yani <tt>kullanıcı adı</tt> "
+"ve <tt>şifre</tt> parametrelerini kullanmaktadır."
 
 #: admin/tools.php:98
 msgid ""
@@ -565,33 +588,40 @@ msgid ""
 "make API calls without using your login or your password, using a secret "
 "signature token."
 msgstr ""
+"Eğer kişisel bilgilerinizi vahşi doğaya salmak istemiyorsanız, kullanıcı adı "
+"ve şifreye ihtiyaç duymadan, gizli signature token aracılığıyla API "
+"isteklerini karşılayabilirsiniz."
 
 #: admin/tools.php:102
 #, php-format
 msgid "Your secret signature token: <strong><code>%s</code></strong>"
-msgstr ""
+msgstr "Size özel gizli signature tokeniniz: <strong><code>%s</code></strong>"
 
 #: admin/tools.php:103
 msgid "(It's a secret. Keep it secret) "
-msgstr ""
+msgstr "(Bu bir sır. Sır olarak saklayın) "
 
 #: admin/tools.php:106
 msgid ""
 "This signature token can only be used with the API, not with the admin "
 "interface."
 msgstr ""
+"Bu signature token sadece API ile birlikte kullanılabilir. Yönetici Paneli "
+"ile kullanılamaz."
 
 #: admin/tools.php:109
 msgid "Usage of the signature token"
-msgstr ""
+msgstr "Signature token kullanımı"
 
 #: admin/tools.php:110
 msgid "Simply use parameter <tt>signature</tt> in your API requests. Example:"
 msgstr ""
+"Basitçe <tt>signature</tt> parametresini API isteklerinizde örnekteki gibi "
+"kullanabilirsiniz:"
 
 #: admin/tools.php:114
 msgid "Usage of a time limited signature token"
-msgstr ""
+msgstr "Zaman sınırlamalı signature token kullanımı"
 
 #: admin/tools.php:117 admin/tools.php:119
 msgid "actual value:"
@@ -602,12 +632,12 @@ msgid ""
 "Now use parameters <tt>signature</tt> and <tt>timestamp</tt> in your API "
 "requests. Example:"
 msgstr ""
-"Artık <tt>imza</tt> ve <tt>zamandamgası</tt> parametrelerini API "
-"isteklerinizde kullanabilirsiniz. Örnek:"
+"Artık <tt>signature</tt> ve <tt>timestamp</tt> parametrelerini API "
+"isteklerinizde örnekteki gibi kullanabilirsiniz:"
 
 #: admin/tools.php:124
 msgid "Actual values:"
-msgstr "Gerçek değerler:"
+msgstr "Gerçek Değerler:"
 
 #: admin/tools.php:126
 #, php-format
@@ -637,7 +667,7 @@ msgid ""
 "Please, pretty please, it is recommended that you <strong>backup</strong> "
 "your database<br/>(you should do this regularly anyway)"
 msgstr ""
-"Lütfen! Lütfen! Lütfen! Düzenli olarak  <strong>yedek almayı</strong> lütfen "
+"Lütfen! Lütfen! Lütfen! Düzenli olarak <strong>yedek almayı</strong> lütfen "
 "unutmayınız.<br/>Ve bunu düzenli olarak tekrarlamayı da!"
 
 #: admin/upgrade.php:53
@@ -761,7 +791,7 @@ msgstr "IP"
 #: includes/functions-html.php:216
 #, php-format
 msgid "Search for %1$s in %2$s"
-msgstr "%1$s'i %2$s içinde ara"
+msgstr "Anahtar Kelime: %1$s / Şurada Ara: %2$s"
 
 #: includes/functions-html.php:230
 msgid "Ascending"
@@ -795,7 +825,7 @@ msgstr "daha az"
 #: includes/functions-html.php:251
 #, php-format
 msgid "Show links with %1$s than %2$s clicks"
-msgstr "Bağlantıları %2$s tıklamaları yerine %1$s ile göster"
+msgstr "%2$s tıklamadan %1$s tıklamaya sahip olan bağlantıları göster"
 
 #: includes/functions-html.php:256
 msgid "before"
@@ -813,7 +843,8 @@ msgstr "arasında"
 #: includes/functions-html.php:265
 #, php-format
 msgid "Show links created %1$s %2$s %3$s %4$s"
-msgstr "Oluşturulan bağlantıları göster: %1$s %2$s %3$s %4$s"
+msgstr ""
+"Şu tarihten/tarihler %1$s %2$s %3$s %4$s oluşturulan bağlantıları göster"
 
 #: includes/functions-html.php:269
 msgid "Search"
@@ -1036,37 +1067,37 @@ msgstr "Cumartesi"
 #. //translators: one-letter abbreviation of the weekday
 #: includes/functions-l10n.php:805
 msgid "S_Sunday_initial"
-msgstr "Pz_Pazar_initial"
+msgstr "P"
 
 #. //translators: one-letter abbreviation of the weekday
 #: includes/functions-l10n.php:806
 msgid "M_Monday_initial"
-msgstr "Pt_Pazartesi_initial"
+msgstr "P"
 
 #. //translators: one-letter abbreviation of the weekday
 #: includes/functions-l10n.php:807
 msgid "T_Tuesday_initial"
-msgstr "S_Salı_initial"
+msgstr "S"
 
 #. //translators: one-letter abbreviation of the weekday
 #: includes/functions-l10n.php:808
 msgid "W_Wednesday_initial"
-msgstr "Ç_Çarşamba_initial"
+msgstr "Ç"
 
 #. //translators: one-letter abbreviation of the weekday
 #: includes/functions-l10n.php:809
 msgid "T_Thursday_initial"
-msgstr "Pe_Perşembe_initial"
+msgstr "P"
 
 #. //translators: one-letter abbreviation of the weekday
 #: includes/functions-l10n.php:810
 msgid "F_Friday_initial"
-msgstr "Cu_Cuma_initial"
+msgstr "C"
 
 #. //translators: one-letter abbreviation of the weekday
 #: includes/functions-l10n.php:811
 msgid "S_Saturday_initial"
-msgstr "Ct_Cumartesi_initial"
+msgstr "C"
 
 #. //translators: three-letter abbreviation of the weekday
 #: includes/functions-l10n.php:818
@@ -1166,62 +1197,62 @@ msgstr "Aralık"
 #. //translators: three-letter abbreviation of the month
 #: includes/functions-l10n.php:842
 msgid "Jan_January_abbreviation"
-msgstr "Oca_Ocak_abbreviation"
+msgstr "Oca"
 
 #. //translators: three-letter abbreviation of the month
 #: includes/functions-l10n.php:843
 msgid "Feb_February_abbreviation"
-msgstr "Şub_Şubat_abbreviation"
+msgstr "Şub"
 
 #. //translators: three-letter abbreviation of the month
 #: includes/functions-l10n.php:844
 msgid "Mar_March_abbreviation"
-msgstr "Mar_Mart_abbreviation"
+msgstr "Mar"
 
 #. //translators: three-letter abbreviation of the month
 #: includes/functions-l10n.php:845
 msgid "Apr_April_abbreviation"
-msgstr "Nis_Nisan_abbreviation"
+msgstr "Nis"
 
 #. //translators: three-letter abbreviation of the month
 #: includes/functions-l10n.php:846
 msgid "May_May_abbreviation"
-msgstr "May_Mayıs_abbreviation"
+msgstr "May"
 
 #. //translators: three-letter abbreviation of the month
 #: includes/functions-l10n.php:847
 msgid "Jun_June_abbreviation"
-msgstr "Haz_Haziran_abbreviation"
+msgstr "Haz"
 
 #. //translators: three-letter abbreviation of the month
 #: includes/functions-l10n.php:848
 msgid "Jul_July_abbreviation"
-msgstr "Tem_Temmuz_abbreviation"
+msgstr "Tem"
 
 #. //translators: three-letter abbreviation of the month
 #: includes/functions-l10n.php:849
 msgid "Aug_August_abbreviation"
-msgstr "Ağu_Ağustos_abbreviation"
+msgstr "Ağu"
 
 #. //translators: three-letter abbreviation of the month
 #: includes/functions-l10n.php:850
 msgid "Sep_September_abbreviation"
-msgstr "Eyl_Eylül_abbreviation"
+msgstr "Eyl"
 
 #. //translators: three-letter abbreviation of the month
 #: includes/functions-l10n.php:851
 msgid "Oct_October_abbreviation"
-msgstr "Eki_Ekim_abbreviation"
+msgstr "Eki"
 
 #. //translators: three-letter abbreviation of the month
 #: includes/functions-l10n.php:852
 msgid "Nov_November_abbreviation"
-msgstr "Kas_Kasım_abbreviation"
+msgstr "Kas"
 
 #. //translators: three-letter abbreviation of the month
 #: includes/functions-l10n.php:853
 msgid "Dec_December_abbreviation"
-msgstr "Ara_Aralık_abbreviation"
+msgstr "Ara"
 
 #: includes/functions-l10n.php:860
 msgid "am"
