--- a/tr_TR.po
+++ b/tr_TR.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: YOURLS v1.7.2  // Turkish Translation\n"
 "POT-Creation-Date: 2014-01-11 11:50+0100\n"
-"PO-Revision-Date: 2017-11-03 21:52+0300\n"
+"PO-Revision-Date: 2017-11-14 18:27+0300\n"
 "Language-Team: Murat Eray KORKMAZ - www.murateray.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -271,7 +271,7 @@ msgid ""
 "%2$s</strong> clicks, and counting!"
 msgstr ""
 "Şu anki durum: <strong class=\"increment\">%1$s</strong> bağlantı, <strong>"
-"%2$s</strong> ve artmaya devam ediyor!"
+"%2$s</strong> tıklama ve artmaya devam ediyor!"
 
 #: admin/index.php:337
 msgid "No URL"
